--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
     <link href="static/styles.css" rel="stylesheet">
 </head>
 <body>
-
+<!--Header-->
+<header class = "navbar-expand-md navbar-light sticky-top">
+    <div class = "container-fluid">
+        <table>
+            <tr>
+                <td>
+                    <a class = "navbar-brand" href = "index.html" id = "brand">Brand</a>
+                    <a href = "#" id = "settings">Settings</a>
+                    <a href = "#" id = "hikes">Hikes</a>
+                    <div class="form-group has-search" id = "search-engine">
+                        <span class="fa fa-search form-control-feedback"></span>
+                        <input type="text" class="form-control" id = "search-engine-input" placeholder="Search">
+                    </div>
+                </td>
+            </tr>
+        </table>        
+    </div>
+</header>
 </body>
 
 </html>
