--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
         </table>        
     </div>
 </header>
+<!--Footer-->
+<footer class="container-fluid fixed-bottom" id="footer">
+    <div class="fixed-bottom">
+        <ul id="coins" class="fixed-bottom">
+            <li><img src="coins.png" id="ownedCoins"></li>
+            <li id="coinAmmount">0</li>
+        </ul>
+        <p id="kilometers">0km</p>
+    </div>
+
+    <div class="fixed-bottom">
+
+    </div>
+
+    <div class="fixed-bottom">
+        <ul id="coinstoEarn">
+            <li>+<img src="coins.png" id="ownedCoins"></li>
+            <li>0</li>
+        </ul>
+        <p id="kilometersLeft">0km left</p>
+    </div>
+    </footer>
 </body>
 
 </html>
